test/src/e2e_vm_tests/test_programs/should_pass/language/use_full_path_names/src/c_dependency.sw
library baz;

pub fn return_1() -> u32 {
    1u32
}
